objects/Check_List__c.object
<CustomObject>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isMillValley__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mill Valley</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSerene__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serene</label>
        <type>Checkbox</type>
    </fields>
    <label>Check List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>isSerene__c</columns>
        <columns>isMillValley__c</columns>
        <columns>SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Check List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Check Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>